Revert "Revert "Version 2.5.0""
This reverts commit 5bf65590301b335b8952f462ab006c55b088c3f9.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 2.5.0 - Jun 22, 2017
+
+- Add Segwit support
+- Add support for 64-bit PowerPC
+
 Version 2.4.5 - Jun 10, 2016
 
 - Fix a memory leak affecting long polling
